Bug 416053 - Missing entries in the New context menu entry for the logical view
Summary: Missing entries in the New context menu entry for the logical view
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.30.0 (KDE Applications 19.12.0)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-09 16:05 UTC by Ralf Habacker
Modified: 2020-01-09 16:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.30.2 (KDE Release 19.12.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-01-09 16:05:40 UTC
STEPS TO REPRODUCE
1. start umbrello
2. right click on the entry logical view, then select new 

OBSERVED RESULT
There are missing entries for interface, datatype, ane enum

EXPECTED RESULT
The mentioned entries should be present

SOFTWARE/OS VERSIONS
Linux: openSUSE_Leap_15.1
(available in About System)
KDE Frameworks Version: 5.45
Qt Version: 5.9
Comment 1 Ralf Habacker 2020-01-09 16:07:02 UTC
Git commit 6f35d385c3307879c005289531c5ca0098c0924f by Ralf Habacker.
Committed on 09/01/2020 at 16:06.
Pushed by habacker into branch 'release/19.12'.

Fix 'Missing entries in the New context menu entry for the logical view'
FIXED-IN: 2.30.2 (KDE Release 19.12.2)

M  +4    -4    umbrello/menus/listpopupmenu.cpp

https://invent.kde.org/kde/umbrello/commit/6f35d385c3307879c005289531c5ca0098c0924f