Fix 'Missing entries in the New context menu entry for the logical view'

BUG:416053
FIXED-IN: 2.30.2 (KDE Release 19.12.2)